fix(size): add maxWidth to avoid text overflow

--- a/src/ui/atoms/textField/textField.scss
+++ b/src/ui/atoms/textField/textField.scss
@@ -14,6 +14,7 @@ $sizes: (
     display: flex;
     flex-direction: column;
     gap: 10px;
+    max-width: 100%;
 
     @each $size-key, $size-value in $sizes {
       &.#{$size-key} {
